# OrinMLLM

./: .gitignore  CMakeLists.txt
cuda_kernel_optimized/add_kernel/: add_kernel_optimization_report.md  bench_add  bench_add_kernels.cu  ncu_metrics.csv  ncu_output.csv  ncu_report.ncu-rep
cuda_kernel_optimized/emb_kernel/: bench_emb  bench_emb_kernels.cu  emb_kernel_optimization_report.md  ncu_details.csv  ncu_emb_report.ncu-rep
cuda_kernel_optimized/flash_attention_kernel/: bench_flash_attn  bench_flash_attn.cu  flash_attention_kernel_optimization_report.md  ncu_flash_attn_report.ncu-rep
cuda_kernel_optimized/fused_ffn_kernel/: README.md  bench_fused_ffn  bench_fused_ffn.cu  bench_fused_ffn_timing.cu  bench_timing
cuda_kernel_optimized/matmul_kernel/: README.md  bench_matmul_timing  bench_matmul_timing.cu
cuda_kernel_optimized/mha_kernel/: bench_mha  bench_mha_kernels.cu  mha_kernel_optimization_report.md  ncu_mha_report.ncu-rep  ncu_mha_report_full.ncu-rep
cuda_kernel_optimized/rmsnorm_kernel/: bench_rmsnorm  bench_rmsnorm.cu  bench_rmsnorm_opt  bench_rmsnorm_opt.cu  ncu_after_output.txt  ncu_before_output.txt  ncu_profile  ncu_profile.cu  ncu_profile_opt  ncu_profile_opt.cu  ncu_rmsnorm_after.ncu-rep  ncu_rmsnorm_before.ncu-rep  rmsnorm_kernel_optimization_report.md  run_perf_test.sh
cuda_kernel_optimized/rope_kernel/: ncu_metrics_opt.csv  ncu_profile_rope  ncu_profile_rope.cu  ncu_profile_rope_opt  ncu_profile_rope_opt2  ncu_rope_before.ncu-rep  ncu_rope_report_opt.ncu-rep  rope_kernel_optimization_report.md
cuda_kernel_optimized/swiglu_kernel/: bench_swiglu  bench_swiglu.cu  ncu_fp16_opt.ncu-rep  ncu_orig.csv  (+10 more)
demo/: CMakeLists.txt  inference_common.h  main_qwen.cpp  main_qwen3.cpp  main_qwen3_vl.cpp  test_cuda_graph.cpp
docs/: AWQ_Model_Adaptation_Guide.md  AWQ_算子与推理流程深度分析报告.md  QWEN3_VL_ADAPTATION_REPORT.md  cuda_graph_analysis_report.md  flash_attention_analysis_report.md  fused_ffn_analysis_report.md  jinja_cpp_analysis_report.md  multi_turn_and_streaming_analysis_report.md  paged_attention_analysis_report.md  prefix_cache_and_radix_tree_analysis_report.md  qwen_base_refactoring_report.md
hf_infer/: debug_k_values.py  qwen2_infer.py  qwen3_infer.py  qwen3_vl_infer.py  simple_qwen3_vl.py  test_qwen3_vl.py
tools/: check_d2t_coverage.py  compare_logits.py  convert_eagle3.py  export_qwen2.5-1.5B.py  export_qwen2.5-7B-fp16.py  export_qwen2.5-7B.py  export_qwen2.py  export_qwen3-8B-awq.py  export_qwen3-8B-fp16.py  export_qwen3-VL-8B-fp16.py  test_attention_types.sh  test_prefix_cache_full.cpp  test_radix_tree.cpp  verify_eagle3_forward.py  verify_fc.py  verify_full_forward.py
(+106 files in other folders)
