
add_executable(llama_infer main.cpp)
target_link_directories(llama_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(llama_infer llama)
if (LLAMA3_SUPPORT)
    message(STATUS "LINK LLAMA3 SUPPORT")
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(llama_infer absl::base re2::re2 nlohmann_json::nlohmann_json)
endif ()
set_target_properties(llama_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

if (QWEN2_SUPPORT)
    message(STATUS "LINK QWEN2 SUPPORT")
    add_executable(qwen_infer main_qwen.cpp)
    target_link_directories(qwen_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(qwen_infer llama)
    target_link_libraries(qwen_infer absl::base re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(qwen_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
    
    # CUDA Graph test executable
    add_executable(test_cuda_graph test_cuda_graph.cpp)
    target_link_directories(test_cuda_graph PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    target_link_libraries(test_cuda_graph llama)
    target_link_libraries(test_cuda_graph absl::base re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(test_cuda_graph PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif ()

if (QWEN3_SUPPORT)
    message(STATUS "LINK QWEN3 SUPPORT")
    add_executable(qwen3_infer main_qwen3.cpp)
    target_link_directories(qwen3_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(qwen3_infer llama)
    target_link_libraries(qwen3_infer absl::base absl::strings absl::strings_internal re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(qwen3_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif ()

if (QWEN3_VL_SUPPORT)
    message(STATUS "LINK QWEN3_VL SUPPORT (Vision-Language Model)")
    add_executable(qwen3_vl_infer main_qwen3_vl.cpp)
    target_link_directories(qwen3_vl_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(qwen3_vl_infer llama)
    target_link_libraries(qwen3_vl_infer absl::base absl::strings absl::strings_internal re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(qwen3_vl_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif ()